--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 alembic==0.9.5
 asn1crypto==0.24.0
 bcrypt==3.1.3
+beautifulsoup4==4.6.3
+bs4==0.0.1
 cffi==1.10.0
 click==6.7
 coverage==4.4.1
@@ -24,6 +26,7 @@ itsdangerous==0.24
 Jinja2==2.9.6
 Mako==1.0.7
 MarkupSafe==1.0
+nltk==3.3
 nose==1.3.7
 psycopg2==2.7.3
 pycparser==2.18
